# vcpkg-repro

./: README.md
.github/workflows/: clang-tidy.yml  cmake.yml
lib/: CMakeLists.txt  Position.cpp
lib/include/: Position.hpp
src/: CMakeLists.txt  main.cpp
system-utils/: CMakeLists.txt
test/: CMakeLists.txt
